# DiskWipe.IO

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
scripts/: gen-logo.mjs
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows-app-manifest.xml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: linux-postinstall.sh
src-tauri/src/: disks.rs  format.rs  lib.rs  main.rs  model.rs  smart.rs  util.rs
src/components/: DiskList.tsx  FormatPanel.tsx  SmartPanel.tsx  UpdateBanner.tsx  ui.tsx
src/lib/: api.ts  format.ts  pdf.ts  smartMeta.ts  updater.ts
