[package]
name = "diskwipe-io"
version = "0.1.3"
description = "DiskWipe.IO — SMART monitoring and secure disk formatting"
authors = ["DiskWipe.IO contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "diskwipe_io_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The updater & process plugins are only meaningful on desktop targets.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
codegen-units = 1
